# pkg/route/routes.go
@@ -51,28 +51,25 @@ func InstallRoutes(r *gin.Engine) {
 	connectorController := controller.NewConnectorController()
 	connectorController.StartBackgroundLoop()
 
-	networkScoped := secured.Group("/")
-	networkScoped.Use(requireConfiguredNetworkCode())
+	secured.POST("/inner/chain-invoke/evm/common/tx-send", connectorController.TxSend)
+	secured.POST("/inner/chain-data/evm/common/tx-query", connectorController.TxQuery)
+	secured.POST("/inner/chain-data/evm/common/address-balance", connectorController.AddressBalance)
+	secured.POST("/inner/chain-data/evm/common/latest-block", connectorController.LatestBlock)
+	secured.POST("/inner/chain-data/evm/common/token-supply", connectorController.TokenSupply)
+	secured.POST("/inner/chain-data/evm/common/token-balance", connectorController.TokenBalance)
+	secured.POST("/inner/chain-data/evm/common/token-add", connectorController.TokenAdd)
+	secured.POST("/inner/chain-data/evm/common/token-delete", connectorController.TokenDelete)
+	secured.POST("/inner/chain-data/evm/common/token-get", connectorController.TokenGet)
+	secured.POST("/inner/chain-data/evm/common/token-list", connectorController.TokenList)
 
-	networkScoped.POST("/inner/chain-invoke/:networkCode/common/tx-send", connectorController.TxSend)
-	networkScoped.POST("/inner/chain-data/:networkCode/common/tx-query", connectorController.TxQuery)
-	networkScoped.POST("/inner/chain-data/:networkCode/common/address-balance", connectorController.AddressBalance)
-	networkScoped.POST("/inner/chain-data/:networkCode/common/latest-block", connectorController.LatestBlock)
-	networkScoped.POST("/inner/chain-data/:networkCode/common/token-supply", connectorController.TokenSupply)
-	networkScoped.POST("/inner/chain-data/:networkCode/common/token-balance", connectorController.TokenBalance)
-	networkScoped.POST("/inner/chain-data/:networkCode/common/token-add", connectorController.TokenAdd)
-	networkScoped.POST("/inner/chain-data/:networkCode/common/token-delete", connectorController.TokenDelete)
-	networkScoped.POST("/inner/chain-data/:networkCode/common/token-get", connectorController.TokenGet)
-	networkScoped.POST("/inner/chain-data/:networkCode/common/token-list", connectorController.TokenList)
+	secured.POST("/inner/chain-invoke/evm/wallet/faucet", connectorController.Faucet)
 
-	networkScoped.POST("/inner/chain-invoke/:networkCode/wallet/faucet", connectorController.Faucet)
+	secured.POST("/inner/chain-data-subscribe/evm/tx-subscribe", connectorController.TxSubscribe)
+	secured.POST("/inner/chain-data-subscribe/evm/address-subscribe", connectorController.AddressSubscribe)
+	secured.POST("/inner/chain-data-subscribe/evm/tx-subscribe-cancel", connectorController.TxSubscribeCancel)
+	secured.POST("/inner/chain-data-subscribe/evm/address-subscribe-cancel", connectorController.AddressSubscribeCancel)
 
-	networkScoped.POST("/inner/chain-data-subscribe/:networkCode/tx-subscribe", connectorController.TxSubscribe)
-	networkScoped.POST("/inner/chain-data-subscribe/:networkCode/address-subscribe", connectorController.AddressSubscribe)
-	networkScoped.POST("/inner/chain-data-subscribe/:networkCode/tx-subscribe-cancel", connectorController.TxSubscribeCancel)
-	networkScoped.POST("/inner/chain-data-subscribe/:networkCode/address-subscribe-cancel", connectorController.AddressSubscribeCancel)
-
-	networkScoped.POST("/inner/contract/list/:networkCode", connectorController.ContractList)
+	secured.POST("/inner/contract/list/evm", connectorController.ContractList)
 	secured.POST("/inner/contract/contract-config-push-record/push", connectorController.ContractPush)
 
 	secured.POST("/open/all-clients/contract/web3-contract-info", connectorController.Web3ContractInfo)
